feat: Recipe creation
- fixes UI defect with missing results in summary

--- a/src/templates/recipe-manager.hbs
+++ b/src/templates/recipe-manager.hbs
@@ -113,7 +113,7 @@
                             </div>
                         {{else}}
                             <div class="fabricate-alert fabricate-warning">
-                                <p>{{localize "fabricate.RecipeManagerApp.recipes.noneSet"}}</p>
+                                <p>{{localize "fabricate.RecipeManagerApp.results.noneSet"}}</p>
                             </div>
                         {{/each}}
                     </div>
