--- a/src/templates/crafting-system-manager.hbs
+++ b/src/templates/crafting-system-manager.hbs
@@ -49,7 +49,7 @@
 
             <div class="flexrow flex3"></div>
             <div class="flexrow flex3">
-                <p class="fabricate-no-system-selected">No crafting system selected.<br/>Create a new system or select one from the left menu.</p>
+                <p class="fabricate-no-system-selected">{{localize "fabricate.CraftingSystemManagerApp.noSystemSelected"}}</p>
             </div>
 
         {{/if}}
