--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -885,6 +885,7 @@ BEGIN ITEM SHEET TAB STYLES
 
 .fabricate-item-header {
   display: flex;
+  align-items: center;
   box-sizing: border-box;
   border: 1px solid var(--color-border-dark-tertiary);
   border-radius: 3px;
