feat: #81 Fabricate item tab look and feel
- Adds filtering systems
- Adds owned item details
- Starts adding recipe ingredient options

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -834,9 +834,9 @@ BEGIN COMMON VISUAL STYLES
   background: var(--color-border-dark-secondary);
   color: var(--color-text-light-2);
   border-radius: 3px;
-  padding: 4px 8px;
+  padding: 5px 7px;
   &.fabricate-selected {
-    background: var(--color-underline-active);
+    background: var(--color-underline-header);
   }
 }
 
@@ -868,11 +868,22 @@ BEGIN ITEM SHEET TAB STYLES
 .fabricate-item-tab-header {
   display: flex;
   align-items: center;
-  padding-bottom: 6px;
-  border-bottom: 1px solid grey;
+  padding-bottom: 8px;
+  border-bottom: 1px solid var(--color-border-dark-secondary);
   margin-bottom: 10px;
   .fabricate-tag-list {
     flex-grow: 1;
+  }
+  .fabricate-title {
+    display: inline-flex;
+    margin-right: 6px;
+    font-size: var(--font-size-18);
+  }
+  .fabricate-item-condition {
+    display: inline-flex;
+    height: 24px;
+    width: 24px;
+    font-size: var(--font-size-11);
   }
 }
 
@@ -887,7 +898,7 @@ BEGIN ITEM SHEET TAB STYLES
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  border: 1px solid var(--color-border-dark-tertiary);
+  border: 1px solid var(--color-border-dark-secondary);
   border-radius: 3px;
   padding: 8px 8px;
   .fabricate-item-conditions {
@@ -900,10 +911,25 @@ BEGIN ITEM SHEET TAB STYLES
   width: 24px;
   font-size: var(--font-size-11);
   color: var(--color-text-light-1);
-  background: var(--color-border-dark-primary);
+  background: var(--color-text-dark-2);
   border-radius: 12px;
   align-items: center;
   justify-content: center;
+  &.fabricate-warning {
+    background: var(--color-level-warning);
+  }
+  &.fabricate-error {
+    background: var(--color-level-error);
+  }
+  &.fabricate-info {
+    background: var(--color-level-info);
+  }
+}
+
+.fabricate-item-title {
+  color: var(--color-text-dark-1);
+  font-weight: bold;
+  font-size: var(--font-size-14);
 }
 
 /*
