--- a/src/templates/item-sheet-crafting-tab.hbs
+++ b/src/templates/item-sheet-crafting-tab.hbs
@@ -3,36 +3,45 @@
         <div class="fabricate-title">
             Crafting
         </div>
+        {{#if owned}}
+            <span class="fabricate-item-condition fabricate-info" data-tooltip="Owned by {{actor.name}}"><i class="fa-solid fa-user"></i></span>
+        {{else}}
+            <span class="fabricate-item-condition fabricate-warning" data-tooltip="Not owned"><i class="fa-solid fa-user-slash"></i></span>
+        {{/if}}
         <div class="fabricate-tag-list fabricate-inline-list fabricate-align-right">
             {{#each systems}}
-                <span class="fabricate-tag fabricate-list-item fabricate-clickable fabricate-selected">{{system.name}}</span>
+                <span class="fabricate-tag fabricate-list-item fabricate-clickable {{#if visible}}fabricate-selected{{/if}}" data-action="toggleSystemParts" data-system-id="{{system.id}}">{{system.name}}</span>
             {{/each}}
         </div>
     </div>
     {{#each systems}}
-        {{#if recipe}}
-            <div class="fabricate-item-detail">
-                <div class="fabricate-item-header-outer">
-                    <div class="fabricate-item-header">
-                        <div class="fabricate-item-title">
-                            {{localize "fabricate.partTypes.recipe"}}
-                        </div>
-                        <div class="fabricate-item-conditions fabricate-inline-list fabricate-align-right">
-                            <span class="fabricate-item-condition fabricate-list-item" data-tooltip="Part of {{system.name}}"><i class="fa-solid fa-pen-ruler"></i></span>
-                            {{#if ../owned}}
-                                <span class="fabricate-item-condition fabricate-list-item" data-tooltip="Owned by {{../actor.name}}"><i class="fa-solid fa-circle-user"></i></span>
-                            {{else}}
-                                <span class="fabricate-item-condition fabricate-list-item" data-tooltip="Not owned"><i class="fa-solid fa-user-slash"></i></span>
-                            {{/if}}
-                            {{#if craftable}}
-                                <span class="fabricate-item-condition fabricate-list-item" data-tooltip="Can be crafted"><i class="fa-solid fa-hammer"></i></span>
-                            {{else}}
-                                <span class="fabricate-item-condition fabricate-list-item" data-tooltip="Cannot be crafted"><i class="fa-solid fa-xmark"></i></span>
-                            {{/if}}
+        {{#if visible}}
+            {{#if recipe}}
+                <div class="fabricate-item-detail">
+                    <div class="fabricate-item-header-outer">
+                        <div class="fabricate-item-header">
+                            <div class="fabricate-item-title">
+                                {{localize "fabricate.partTypes.recipe"}}
+                            </div>
+                            <div class="fabricate-item-conditions fabricate-inline-list fabricate-align-right">
+                                <span class="fabricate-item-condition fabricate-list-item" data-tooltip="Part of {{system.name}}"><i class="fa-solid fa-pen-ruler"></i></span>
+                                {{#if craftable}}
+                                    <span class="fabricate-item-condition fabricate-info fabricate-list-item" data-tooltip="Can be crafted"><i class="fa-solid fa-hammer"></i></span>
+                                {{else}}
+                                    <span class="fabricate-item-condition fabricate-warning fabricate-list-item" data-tooltip="Cannot be crafted"><i class="fa-solid fa-xmark"></i></span>
+                                {{/if}}
+                            </div>
                         </div>
                     </div>
+                    <div class="fabricate">
+                        {{#each recipe.ingredientOptions.choices}}
+                            <div>Choice</div>
+                        {{else}}
+                            <div>No choice</div>
+                        {{/each}}
+                    </div>
                 </div>
-            </div>
+            {{/if}}
         {{/if}}
     {{/each}}
 </div>
