--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -352,60 +352,6 @@
 @background-red: #F24D44;
 @text-red: #66201D;
 
-.fabricate-component-tile(@tile-size, @info-size) {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  cursor: pointer;
-  padding: 0;
-  height: @tile-size;
-  width: @tile-size;
-  margin-right: calc(@tile-size / 6);
-  margin-bottom: calc(@tile-size / 6);
-  image {
-    border-radius: 5px;
-  }
-  .fabricate-component-name {
-    position: absolute;
-    width: @tile-size;
-    height: calc(@tile-size / 4);
-    z-index: 1;
-    bottom: 0;
-    left: 0;
-    color: var(--color-text-light-1);
-    background: var(--color-border-dark-2);
-    font-size: calc(@tile-size / 7);
-    text-align: center;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0 0 5px 5px;
-  }
-  .fabricate-info {
-    width: @info-size;
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    right: 0;
-    margin-right: calc(-1 * @info-size / 2);
-    margin-top: calc(-1 * @info-size / 2);
-    .fabricate-detail, .fabricate-button {
-      display: block;
-      width: @info-size;
-      height: @info-size;
-      color: var(--color-text-light-1);
-      background: var(--color-border-dark-2);
-      border-radius: calc(@info-size / 2);
-      font-size: calc(@info-size / 2);
-      padding-top: calc(@info-size / 5);
-      margin-bottom: calc(@info-size / 10);
-      text-align: center;
-    }
-  }
-}
-
 .fabricate-application {
 
   aside.sidebar {
@@ -793,6 +739,77 @@ BEGIN COMMON STRUCTURAL STYLES
 =====================================================================
 */
 
+.fabricate-component-list(@tile-size, @info-size) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  &.fabricate-align-left {
+    align-items: flex-start;
+  }
+  &.fabricate-align-right {
+    align-items: flex-end;
+  }
+  &.fabricate-align-center {
+    align-items: center;
+  }
+  .fabricate-component {
+    .fabricate-component-tile(@tile-size, @info-size);
+  }
+}
+
+.fabricate-component-tile(@tile-size, @info-size) {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+  padding: 0;
+  height: @tile-size;
+  width: @tile-size;
+  margin-right: calc(@tile-size / 5);
+  margin-bottom: calc(@tile-size / 5);
+  image {
+    border-radius: 5px;
+  }
+  .fabricate-component-name {
+    position: absolute;
+    width: @tile-size;
+    height: calc(@tile-size / 4);
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    color: var(--color-text-light-1);
+    background: var(--color-border-dark-2);
+    font-size: calc(@tile-size / 7);
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0 0 5px 5px;
+  }
+  .fabricate-info {
+    width: @info-size;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    margin-right: calc(-1 * @info-size / 2);
+    margin-top: calc(-1 * @info-size / 2);
+    .fabricate-detail, .fabricate-button {
+      display: block;
+      width: @info-size;
+      height: @info-size;
+      color: var(--color-text-light-1);
+      background: var(--color-border-dark-2);
+      border-radius: calc(@info-size / 2);
+      font-size: calc(@info-size / 2);
+      padding-top: calc(@info-size / 5);
+      margin-bottom: calc(@info-size / 10);
+      text-align: center;
+    }
+  }
+}
+
 .fabricate-inline-list {
   flex-direction: row-reverse;
   &.fabricate-align-right {
@@ -814,8 +831,25 @@ BEGIN COMMON STRUCTURAL STYLES
   }
 }
 
-.fabricate-clickable {
-  cursor: pointer;
+.fabricate-columns {
+  display: flex;
+  flex-wrap: nowrap;
+  .fabricate-column {
+    flex: 1;
+    flex-direction: column;
+    display: inline-flex;
+    &.fabricate-align-right {
+      flex-direction: row-reverse;
+    }
+    &.fabricate-align-left {
+      flex-direction: row;
+    }
+  }
+  .fabricate-row {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
 }
 
 /*
@@ -830,6 +864,10 @@ BEGIN COMMON VISUAL STYLES
 =====================================================================
 */
 
+.fabricate-clickable {
+  cursor: pointer;
+}
+
 .fabricate-tag {
   background: var(--color-border-dark-secondary);
   color: var(--color-text-light-2);
@@ -837,6 +875,22 @@ BEGIN COMMON VISUAL STYLES
   padding: 5px 7px;
   &.fabricate-selected {
     background: var(--color-underline-header);
+  }
+}
+
+.fabricate-shadow-underline(@thickness) {
+  position: relative;
+  border-bottom: @thickness solid rgba(0, 0, 0, 0.7);
+  margin-bottom: 4px;
+  &:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    bottom: -2px;
+    height: @thickness;
+    background: rgba(255, 255, 255, 0.7);
   }
 }
 
@@ -860,78 +914,134 @@ BEGIN ITEM SHEET TAB STYLES
 
 .fabricate-item-tab-wrapper {
   overflow-x: hidden;
-  overflow-y: scroll;
   padding-right: 6px;
   padding-top: 6px;
-}
 
-.fabricate-item-tab-header {
-  display: flex;
-  align-items: center;
-  padding-bottom: 8px;
-  border-bottom: 1px solid var(--color-border-dark-secondary);
-  margin-bottom: 10px;
-  .fabricate-tag-list {
-    flex-grow: 1;
+
+  .fabricate-item-tab-header {
+    display: flex;
+    align-items: center;
+    padding-bottom: 8px;
+    border-bottom: 1px solid var(--color-border-dark-secondary);
+    margin-bottom: 10px;
+
+    .fabricate-tag-list {
+      flex-grow: 1;
+    }
+
+    .fabricate-title {
+      display: inline-flex;
+      margin-right: 6px;
+      font-size: var(--font-size-18);
+    }
+
+    .fabricate-item-condition {
+      display: inline-flex;
+      height: 24px;
+      width: 24px;
+      font-size: var(--font-size-11);
+    }
   }
-  .fabricate-title {
-    display: inline-flex;
-    margin-right: 6px;
-    font-size: var(--font-size-18);
+
+  .fabricate-item-header-outer {
+    border: 1px solid var(--color-border-dark-tertiary);
+    border-radius: 4px;
+    margin-bottom: 10px;
+    padding: 2px
   }
+
+  .fabricate-item-header {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid var(--color-border-dark-secondary);
+    border-radius: 3px;
+    padding: 8px 8px;
+
+    .fabricate-item-conditions {
+      flex-grow: 1;
+    }
+  }
+
   .fabricate-item-condition {
-    display: inline-flex;
     height: 24px;
     width: 24px;
     font-size: var(--font-size-11);
+    color: var(--color-text-light-1);
+    background: var(--color-text-dark-2);
+    border-radius: 12px;
+    align-items: center;
+    justify-content: center;
+
+    &.fabricate-warning {
+      background: var(--color-level-warning);
+    }
+
+    &.fabricate-error {
+      background: var(--color-level-error);
+    }
+
+    &.fabricate-info {
+      background: var(--color-level-info);
+    }
+  }
+
+  .fabricate-item-title {
+    color: var(--color-text-dark-1);
+    font-weight: bold;
+    font-size: var(--font-size-14);
+  }
+
+  .fabricate-recipe-ingredients {
+
+    .fabricate-ingredients-header {
+      font-size: var(--font-size-16);
+      .fabricate-shadow-underline(1px);
+      margin-bottom: 8px;
+
+    }
+
+    .fabricate-choice-header {
+      background: var(--color-text-light-primary);
+      justify-content: space-between;
+      margin-bottom: 8px;
+      border-radius: 3px;
+      padding: 6px 8px;
+
+      &.selected {
+        background: var(--color-level-info);
+      }
+
+      .fabricate-select-button {
+        border: 1px solid var(--color-border-dark-tertiary);
+        padding: 4px 8px;
+        border-radius: 4px;
+      }
+    }
+
+    .fabricate-component {
+      padding: 6px 0;
+      .fabricate-shadow-underline(1px);
+    }
+
+    .fabricate-component-image {
+      padding: 2px;
+      background: var(--color-border-dark-tertiary);
+      border: 1px solid var(--color-border-dark-secondary);
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      margin-right: 10px;
+
+      img {
+        height: 34px;
+        width: 34px;
+        border-radius: 4px;
+      }
+    }
+
   }
 }
-
-.fabricate-item-header-outer {
-  border: 1px solid var(--color-border-dark-tertiary);
-  border-radius: 4px;
-  margin-bottom: 10px;
-  padding: 2px
-}
-
-.fabricate-item-header {
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  border: 1px solid var(--color-border-dark-secondary);
-  border-radius: 3px;
-  padding: 8px 8px;
-  .fabricate-item-conditions {
-    flex-grow: 1;
-  }
-}
-
-.fabricate-item-condition {
-  height: 24px;
-  width: 24px;
-  font-size: var(--font-size-11);
-  color: var(--color-text-light-1);
-  background: var(--color-text-dark-2);
-  border-radius: 12px;
-  align-items: center;
-  justify-content: center;
-  &.fabricate-warning {
-    background: var(--color-level-warning);
-  }
-  &.fabricate-error {
-    background: var(--color-level-error);
-  }
-  &.fabricate-info {
-    background: var(--color-level-info);
-  }
-}
-
-.fabricate-item-title {
-  color: var(--color-text-dark-1);
-  font-weight: bold;
-  font-size: var(--font-size-14);
-}
-
 /*
 =====================================================================
 END ITEM SHEET TAB STYLES
